# chmod

./: .gitignore  CHANGELOG.md  LICENSE  README.md  chmod.cabal
app/: Main.hs
lib/: Chmod.hs  ChmodCli.hs  ChmodSystem.hs  ChmodTypes.hs
test/: ChmodCliSpec.hs  ChmodSpec.hs  ChmodTypesSpec.hs
