cabal-version:      2.4
name:               chmod
version:            0.3.0
synopsis:           Chmod CLI Application and Library

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Joe Haw
maintainer:         joe-haw@localhost

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  ChmodTypes, ChmodCli, Chmod, ChmodSystem

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        parsec ^>=3.1.15,
        containers >=0.6.5,
        unix ^>=2.7.2

    hs-source-dirs:   lib
    default-language: Haskell2010

executable chmod
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        chmod,
        mtl ^>=2.2.2

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite chmod-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    
        base ^>=4.16.1.0,
        chmod,
        QuickCheck ^>=2.14.2,
        hspec ^>=2.10.0,
        containers >=0.6.5,
    other-modules:
        ChmodSpec,
        ChmodTypesSpec,
        ChmodCliSpec
